# 2023-CS-Python

./: .editorconfig  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: lint.yml  lint_1_calculator.yaml  lint_2_group.yaml  lint_3_singleton.yaml  lint_4_ocean.yaml  test.yaml  test_0_lint.yml  test_1_calculator.yaml  test_2_group.yaml  test_3_singleton.yaml  test_4_ocean.yaml
src/01_Calculator/: calculator.py  test_calculator.py
src/02_Group/: README.md  group.py  test_group.py
src/03_Singleton/: singleton.py  test_singleton.py
src/04_Ocean/: README.md  ocean.py  test_ocean.py
