[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "2023-cs-python"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Evgeny Maruschenko", email = "maruschin@gmail.ru" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://gitlab.com/maruschin/2023-cs-python#readme"
Issues = "https://gitlab.com/maruschin/2023-cs-python/issues"
Source = "https://gitlab.com/maruschin/2023-cs-python"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
      packages = ["src/main"]

[tool.hatch.version]
path = "src/main/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest -vv {args:src}"
test1 = "pytest -vv {args:src/01_Calculator}"
test2 = "pytest -vv --doctest-modules {args:src/02_Group}"
test3 = "pytest -vv --doctest-modules {args:src/03_Singleton}"
test4 = "pytest -vv --doctest-modules {args:src/04_Ocean}"

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "mypy>=1.0.0",
  "ruff>=0.1.6",
]
[tool.hatch.envs.lint.scripts]
#typing = "mypy --non-interactive {args:src/foo tests}"
typing = "mypy {args:src}"
style = [
  "ruff {args:.}",
]
fmt = [
  "ruff format {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]
task1 = [
  "ruff {args:src/01_Calculator}",
]
task2 = [
  "ruff {args:src/02_Group}",
]
task3 = [
  "ruff {args:src/03_Singleton}",
]
task4 = [
  "ruff {args:src/04_Ocean}",
]

[tool.ruff]
target-version = "py37"
line-length = 100
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "ISC001",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["main"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"src/**/test_*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["src"]
branch = true
parallel = true
omit = [
  "src/main/__about__.py",
]

[tool.coverage.paths]
src = ["src/main"]
tests = ["src/**/test_*"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
